The Check File monitor can now perform size checks on the total contents of a directory.
---- Changes since 1.300 ----
Added a monitor type for the rate of disk space consumption.
---- Changes since 1.310 ----
Added the ability to create monitors that apply to Webmin server groups, rather than selecting individual machines one at a time.
Added a new Alive System monitor type, which is useful when used remotely to just determine if a machine is up.
---- Changes since 1.320 ----
Fixed the Refresh Status button to work regardless of the selected execution hours or days.
Added a new monitor type for testing a remote SSH server.
---- Changes since 1.330 ----
Added an option to the Remote SSH monitor type to not actually login, just check if we can get to the login prompt.
Converted the UI for all monitors to use ui-lib.pl, for easier theming.
Added support for sending status messages via SMS, for common US mobile carriers.
---- Changes since 1.370 ----
Failure to run a command on a remote system is now properly detected.
---- Changes since 1.390 ----
Added T-COM, Skytel, Vodaphone and several more as a carriers for SMS.
---- Changes since 1.400 ----
Email, SMS and SNMP messages sent by Webmin can be customized, with multiple message templates defined and a different one selected for each monitor.
---- Changes since 1.410 ----
The process check monitor can now be limited to a particular user.
---- Changes since 1.420 ----
Allow saving of remote Webmin monitors when the remote host is down.
Added a new monitor type for checking the expiry and validity of SSL certificates in a local file or on any SSL website.
---- Changes since 1.440 ----
Added an option to the FTP status monitor to make a TLS encrypted connection. Requires the Net::FTPSSL Perl module though.
---- Changes since 1.450 ----
Added a tooltip to status icons to show the hostname.
---- Changes since 1.470 ----
Corrected the domain for AT&T SMS emails.
Added a new monitor type for Dovecot.